--- a/website/css/home.css
+++ b/website/css/home.css
@@ -18,3 +18,6 @@ div.home-blog h3 {
     font-family: 'Roboto', sans-serif;
     font-size: 41px;
 }
+div.home-experts h4, div.home-blog h4 {
+    text-transform: none;
+}
