Set of changes:
- new loop in the home page profile section.
- new page of Profiles.
- metatags included

--- a/website/css/profile.css
+++ b/website/css/profile.css
@@ -20,7 +20,7 @@
 {
     clear: both;
 }
-.profile .col-sm-3 .profileBlock {
+.profile .col-sm-3 .profileBlock, .profile .col-sm-13 .profileBlock {
     clear: both;
 }
 .profile .col-sm-3 h3 {
