--- a/website/macroScripts/Carrousel.cshtml
+++ b/website/macroScripts/Carrousel.cshtml
@@ -1,6 +1,6 @@
 @using umbraco.MacroEngines
-<script src="/scripts/home.js" type="text/javascript"> </script>
-<script src="/scripts/nivo-slider/jquery.nivo.slider.js" type="text/javascript"> </script>
+@*<script src="/scripts/home.js" type="text/javascript"> </script>
+<script src="/scripts/nivo-slider/jquery.nivo.slider.js" type="text/javascript"> </script>*@
 <div class="banner">
     <div class="container">
         <div id="carousel-banner" class="carousel slide">
