--- a/website/masterpages/Base.master
+++ b/website/masterpages/Base.master
@@ -4,17 +4,7 @@
     <!doctype html>
     <html>
     <head>
-        <meta name="description" content="" />
-        <meta name="keywords" content="" />
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="author" content="" />
-        <script src="/scripts/libs/less/less-1.4.1.min.js" type="text/javascript"></script>
-        <link rel="shortcut icon" type="image/png" href="/img/favicon.png" />
-        <title>Barcelona Travel Consulting</title>
+        <umbraco:Macro Alias="MetaTags" runat="server" />
         <!-- Bootstrap core CSS -->
         <%--<link href="/css/libs/bootstrap/bootstrap.css" type="text/css" rel="stylesheet" />--%>
         <link rel="stylesheet/less" type="text/css" href="/less/styles.less" />
@@ -41,27 +31,28 @@
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBNt5jy1JAiSmvEf-iRHSw36BKH90Ymlyo&sensor=false">
         </script>
         <script type="text/javascript">
-            function initialize() {
-                var myLatlng = new google.maps.LatLng(41.404833, 2.192080);
-                var mapOptions = {
-                    center: myLatlng,
-                    zoom: 16,
-                    mapTypeId: google.maps.MapTypeId.ROADMAP
-                };
-                var map = new google.maps.Map(document.getElementById("map-canvas"),
-            mapOptions);
-                var marker = new google.maps.Marker({
-                    position: myLatlng,
-                    map: map,
-                    title: 'Newshore Servicios Globales'
-                });
-            }
-            google.maps.event.addDomListener(window, 'load', initialize);
+                        function initialize() {
+                            var myLatlng = new google.maps.LatLng(41.404833, 2.192080);
+                            var mapOptions = {
+                                center: myLatlng,
+                                zoom: 16,
+                                mapTypeId: google.maps.MapTypeId.ROADMAP
+                            };
+                            var map = new google.maps.Map(document.getElementById("map-canvas"),
+                        mapOptions);
+                            var marker = new google.maps.Marker({
+                                position: myLatlng,
+                                map: map,
+                                title: 'Newshore Servicios Globales'
+                            });
+                        }
+                        google.maps.event.addDomListener(window, 'load', initialize);
         </script>
     </head>
     <body style="">
         <h1 class="hide">
-            Barcelona Travel Consulting</h1>
+            <umbraco:Item Field="#h1TitlePage" runat="server" />
+        </h1>
         <div class="wrapper">
             <!-- Begin: Header -->
             <header>
@@ -96,6 +87,8 @@
             <!-- End: Footer -->
         </div>
         <script type="text/javascript" src="/scripts/libs/bootstrap/jquery.js"></script>
+        <script src="/scripts/libs/jquery.cycle.all.js" type="text/javascript"></script>
+        <script src="/scripts/profileCycle.js" type="text/javascript"></script>
         <script type="text/javascript" src="/scripts/libs/bootstrap/bootstrap.min.js"></script>
         <!-- Script for IE8 -->
         <script type="text/javascript" src="/scripts/libs/respond/respond.min.js"></script>
