--- a/website/masterpages/ProfileDetail.master
+++ b/website/masterpages/ProfileDetail.master
@@ -8,7 +8,7 @@
         <div class="container">
             <div class="row profile">
                 <umbraco:Macro ID="Macro1" Alias="Profile" runat="server" />
-                <umbraco:Macro ID="Macro2" Alias="ProfilesList" runat="server" />
+                <umbraco:Macro size="3" Alias="ProfilesList" runat="server"></umbraco:Macro>
             </div>
         </div>
     </div>
