--- a/website/masterpages/Profiles.master
+++ b/website/masterpages/Profiles.master
@@ -1,10 +1,13 @@
 ﻿<%@ Master Language="C#" MasterPageFile="~/masterpages/Base.master" AutoEventWireup="true" %>
 
 <asp:content ContentPlaceHolderId="mainBody" runat="server">
+<link href="/css/page.css" rel="stylesheet" type="text/css" />
+    <link href="/css/profile.css" rel="stylesheet" type="text/css" />
 	<div class="wrap">
         <div class="container">
             <div class="row profile">
-                <umbraco:Macro Alias="ProfilesList" runat="server" />
+            <umbraco:Macro Alias="RenderPage" runat="server" />
+                <umbraco:Macro size="13" Alias="ProfilesList" runat="server"></umbraco:Macro>
             </div>
         </div>
     </div>
