--- a/website/css/page.css
+++ b/website/css/page.css
@@ -4,7 +4,7 @@
     text-align: center;
 }
 div.page p{
-    margin-left: 15px;
+    /*margin-left: 15px;*/
 }
 .expertise .wrap {
     padding-bottom: 20px;
@@ -14,4 +14,7 @@ div.page h3 {
 }
 div.col-sm-13 {
     margin-left: 20px;
+}
+div.page{
+	margin-left: 0px;
 }
