--- a/website/macroScripts/CarrouselClients.cshtml
+++ b/website/macroScripts/CarrouselClients.cshtml
@@ -18,7 +18,7 @@
                 @foreach (DynamicNode profileNode in profileFolder.First().Descendants("Client"))
                 {
                     <li>
-                        <p>@profileNode.GetProperty("name")</p>
+                        <h3>@profileNode.GetProperty("name")</h3>
                         @{
                     dynamic profileImage = profileNode;
                     var image = profileImage.image.mediaItem[0].Image.umbracoFile;
