--- a/website/macroScripts/CarrouselProfile.cshtml
+++ b/website/macroScripts/CarrouselProfile.cshtml
@@ -38,7 +38,7 @@
                                     <p class="title">
                                         @if (!string.IsNullOrEmpty(profileNode.GetProperty("name").ToString()))
                                         {
-                                            <h3><a href="@profileNode.Url">@profileNode.GetProperty("name")</a></h3>
+                                            <p><a href="@profileNode.Url">@profileNode.GetProperty("name")</a></p>
                                         }
                              
                                     </p>
