--- a/website/macroScripts/RenderPage.cshtml
+++ b/website/macroScripts/RenderPage.cshtml
@@ -7,6 +7,7 @@
                 <h2>@nodeToRender.GetProperty("title")</h2>
                 <p>@nodeToRender.GetProperty("text")</p>
             }
+            @Html.Raw(library.RenderMacroContent(CurrentModel.GetPropertyValue("macroContainer"), CurrentModel.Id))
         </div>
     </div>
 </div>
