--- a/website/masterpages/Base.master
+++ b/website/masterpages/Base.master
@@ -85,6 +85,7 @@
         <script src="/scripts/libs/jquery.cycle.all.js" type="text/javascript"></script>
         <script src="/scripts/profileCycle.js" type="text/javascript"></script>
         <script type="text/javascript" src="/scripts/libs/bootstrap/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/scripts/isotope/jquery.isotope.min.js"></script>
         <!-- Script for IE8 -->
         <script type="text/javascript" src="/scripts/libs/respond/respond.min.js"></script>
     </body>
