--- a/website/css/products.css
+++ b/website/css/products.css
@@ -79,9 +79,32 @@ div#container-categories {
 div#container-categories > div {
     display: inline-block;
     margin: 1em 1em;
-    border: 2px solid #2599A8;
     padding: 0 1em;
     height: 100px;
+    background: #666666;
+    color: #FFFFFF;
+    max-width: 100px;
+    
+    -webkit-transition: -webkit-box-shadow 0.5s ease-out;;
+    -moz-transition: -moz-box-shadow 0.5s ease-out;
+    -o-transition: box-shadow 0.5s ease-out;
+    
+    -webkit-transition: background 0.5s linear;
+    -moz-transition: background 0.5s linear;
+    -o-transition: background 0.5s linear;
+    transition: background 0.5s linear;
+}
+
+div#container-categories > div:hover, .active_subcategory {
+    -moz-box-shadow: 0px 0px 20px #666666;
+  	-webkit-box-shadow: 0px 0px 20px #666666;
+  	box-shadow: 0px 0px 20px #666666;
+  	background: #2599A8 !important;
+}
+
+div#container-categories > div > p 
+{
+    margin: 2px 0;
 }
 
 /********** effects ***************/
