--- a/website/macroScripts/Products.cshtml
+++ b/website/macroScripts/Products.cshtml
@@ -14,7 +14,7 @@
             }
     }
     
-    System.Xml.XPath.XPathNodeIterator xpathIterator = @umbraco.library.GetPreValues(1218);
+    System.Xml.XPath.XPathNodeIterator xpathIterator = @umbraco.library.GetPreValues(1218);//1178
     xpathIterator.MoveNext(); //move to first
     System.Xml.XPath.XPathNodeIterator preValues = xpathIterator.Current.SelectChildren("preValue", "");
     
@@ -41,20 +41,22 @@
         }
     </div>
     <div id="container-products">
-        @foreach (var product in @nodeProducts.GetChildrenAsList.Items)
+        @foreach (dynamic product in @nodeProducts.GetChildrenAsList.Items)
         {
-            string categories = @product.GetProperty("selectCategories").Value.Replace(" ", "-").Replace(",", " ").ToLower();
-            <div id="@product.Id" style="background: #@product.GetProperty("color").Value" class="item @categories">
-                <img width="100px" src="http://i435.photobucket.com/albums/qq71/Kyrie-Senpai/Trafalgar_Law_logo_by_JanxAngel.png" alt="Logo Temporal" />
-                <h2>@product.GetProperty("title")</h2>
-                <p>@Html.Raw(product.GetProperty("description").Value.Substring(0, 50))...</p>
-            </div>
+            string categories = product.GetProperty("selectCategories").Value.Replace(" ", "-").Replace(",", " ").ToLower();
+            <a class="fancybox" rel="all" href="#description-product-@product.Id" title="@product.GetProperty("title")" cat="@categories">
+                <div id="@product.Id" style="background: #@product.GetProperty("color").Value" class="item @categories">
+                    <img width="100px" height="100px" src="@product.image.mediaItem[0].Image.umbracoFile" alt="Logo Temporal" />
+                    <h2>@product.GetProperty("title")</h2>
+                    <p>@Html.Raw(product.GetProperty("description").Value.Substring(0, 50))...</p>
+                </div>
+            </a>
         }
     </div>
     <div id="container-description-products">
         @foreach (var product in @nodeProducts.GetChildrenAsList.Items)
         {
-            <div class="description-product-@product.Id">
+            <div  id="description-product-@product.Id">
                 <h3>@product.GetProperty("title")</h3>
                 <p>@product.GetProperty("description")</p>
             </div>
