--- a/website/masterpages/Base.master
+++ b/website/masterpages/Base.master
@@ -89,6 +89,11 @@
         <!-- Add fancyBox -->
         <link rel="stylesheet" href="/scripts/fancybox/source/jquery.fancybox.css" type="text/css" media="screen" />
         <script type="text/javascript" src="/scripts/fancybox/source/jquery.fancybox.pack.js"></script>
+        <link rel="stylesheet" href="/scripts/fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
+        <script type="text/javascript" src="/scripts/fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+        <script type="text/javascript" src="/scripts/fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+        <link rel="stylesheet" href="/scripts/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
+        <script type="text/javascript" src="/scripts/fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
         <!-- Script for IE8 -->
         <script type="text/javascript" src="/scripts/libs/respond/respond.min.js"></script>
     </body>
