validacion logo producto

--- a/website/macroScripts/Products.cshtml
+++ b/website/macroScripts/Products.cshtml
@@ -1,4 +1,4 @@
-@using umbraco.MacroEngines
+﻿@using umbraco.MacroEngines
 @{
     DynamicNode nodeProducts = new DynamicNode();
     DynamicNode nodeCategories = new DynamicNode();
@@ -46,7 +46,9 @@
             string categories = product.GetProperty("selectCategories").Value.Replace(" ", "-").Replace(",", " ").ToLower();
             <a class="fancybox" rel="all" href="#description-product-@product.Id" title="@product.GetProperty("title")" cat="@categories">
                 <div id="@product.Id" style="background: #@product.GetProperty("color").Value" class="item @categories">
-                    <img width="100px" height="100px" src="@product.image.mediaItem[0].Image.umbracoFile" alt="Logo Temporal" />
+                    @if(product.image.mediaItem.Count() != 0) {
+                        <img width="100px" height="100px" src="@product.image.mediaItem[0].Image.umbracoFile" alt="Logo" />
+                    }
                     <h2>@product.GetProperty("title")</h2>
                     <p>@Html.Raw(product.GetProperty("description").Value.Substring(0, 50))...</p>
                 </div>
