correccion algunos estilos

--- a/website/macroScripts/Products.cshtml
+++ b/website/macroScripts/Products.cshtml
@@ -35,7 +35,9 @@
                         <img width="76px" height="76px" src="http://www.grupointercom.com/sites/default/files/business/logos/newshore.png" alt="Logo" /> 
                     }
                 </div>
-                <p>@category.GetProperty("title").Value</p>
+                <div>
+                    <p>@category.GetProperty("title").Value</p>
+                </div>
             </div>
         }
     </div>
