--- a/website/css/products.css
+++ b/website/css/products.css
@@ -109,16 +109,15 @@ div#container-categories > div
 {
     display: inline-block;
     float:left;
+    width: 16%;
 }
 
-div#container-categories > div > div {
+div#container-categories > div > div:first-child {
     display: inline-block;
     margin: 0em 0.5em 0 0.5em;
     height: 76px;
     background: #666666;
     color: #FFFFFF;
-    max-width: 76px;
-    
     -webkit-transition: -webkit-box-shadow 0.5s ease-out;;
     -moz-transition: -moz-box-shadow 0.5s ease-out;
     -o-transition: box-shadow 0.5s ease-out;
@@ -127,21 +126,26 @@ div#container-categories > div > div {
     -moz-transition: background 0.5s linear;
     -o-transition: background 0.5s linear;
     transition: background 0.5s linear;
+    float: left;
 }
 
-div#container-categories > div > div:hover, .active_subcategory {
+div#container-categories > div > div:first-child:hover, .active_subcategory {
     -moz-box-shadow: 0px 0px 20px #666666;
   	-webkit-box-shadow: 0px 0px 20px #666666;
   	box-shadow: 0px 0px 20px #666666;
   	background: #2599A8 !important;
 }
 
-div#container-categories > div > p 
+div#container-categories > div > div:nth-child(2) 
 {
-    margin: 2px 0;
-    display: inline-block;
-    vertical-align: middle;
     font-size: 1.4em;
+    vertical-align: middle;
+}
+
+div#container-categories > div > div:nth-child(2) > p
+{
+    margin: 0;
+    vertical-align: middle;
 }
 
 .clear 
