--- a/website/macroScripts/Products.cshtml
+++ b/website/macroScripts/Products.cshtml
@@ -27,7 +27,7 @@
                 <div>
                     @if (category.image.mediaItem.Count() != 0)
                     {
-                        <img width="76px" height="76px" src="@category.image.mediaItem[0].File.umbracoFile" alt="Logo" />
+                        <img width="76px" height="76px" src="@category.image.mediaItem[0].Image.umbracoFile" alt="Logo" />
                         @*<img width="76px" height="76px" src="http://www.grupointercom.com/sites/default/files/business/logos/newshore.png" alt="Logo" />*@
                     }
                     else
